# game-of-life

./: .travis.yml  CODEOWNERS.md  CONTRIBUTING.md  Cargo.toml  PULL_REQUEST_TEMPLATE.md  README.md  changelog.md
src/: main.rs
