[package]
name = "game-of-life"
version = "1.0.0"
edition = "2021"
authors = ["Antoine <antoine.sb@orange.fr>"]
description = "This project is an entry to the Local Hack Day 2018."
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["conway", "game of life", "CLI", "simulation", "cellular automaton"]
categories = ["games", "science", "simulation"]

[dependencies]
log = "0.4.6"
clap = {version = "^4.2", features = ["derive"] }
rand = "^0.8"